--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -28,87 +28,6 @@ Author: Brian J Hoskins
   <!-- interface-description One Logger To Rule (them) All -->
   <!-- interface-copyright Brian J Hoskins -->
   <!-- interface-authors Brian J Hoskins -->
-  <object class="GtkAboutDialog" id="dlg_about">
-    <property name="can_focus">False</property>
-    <property name="resizable">False</property>
-    <property name="window_position">center</property>
-    <property name="type_hint">dialog</property>
-    <property name="program_name">OLTRA</property>
-    <property name="version">Version 3.0</property>
-    <property name="copyright" translatable="yes">© Brian J Hoskins, Hoskins.Tech</property>
-    <property name="comments" translatable="yes">One logger to rule (them) all.</property>
-    <property name="website">hoskins.tech</property>
-    <property name="website_label" translatable="yes">Hoskins.Tech</property>
-    <property name="authors">Brian J Hoskins</property>
-    <property name="logo">logo_200.png</property>
-    <property name="license_type">gpl-3-0</property>
-    <child internal-child="vbox">
-      <object class="GtkBox" id="aboutdialog-vbox1">
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
-        <child internal-child="action_area">
-          <object class="GtkButtonBox" id="aboutdialog-action_area1">
-            <property name="can_focus">False</property>
-            <property name="layout_style">end</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-      </object>
-    </child>
-  </object>
-  <object class="GtkListStore" id="lst_debug">
-    <columns>
-      <!-- column-name TIME -->
-      <column type="gchararray"/>
-      <!-- column-name TYPE -->
-      <column type="gchararray"/>
-      <!-- column-name MESSAGE -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
-  <object class="GtkListStore" id="lst_extraction_engines"/>
-  <object class="GtkListStore" id="lst_history">
-    <columns>
-      <!-- column-name TIME_STAMP -->
-      <column type="gchararray"/>
-      <!-- column-name SERIAL_NUMBER -->
-      <column type="gchararray"/>
-      <!-- column-name RESULT -->
-      <column type="gboolean"/>
-      <!-- column-name MESSAGE -->
-      <column type="gchararray"/>
-      <!-- column-name STATION -->
-      <column type="gchararray"/>
-      <!-- column-name REJECT_ID -->
-      <column type="guint"/>
-    </columns>
-  </object>
-  <object class="GtkListStore" id="lst_listeners">
-    <columns>
-      <!-- column-name col_name -->
-      <column type="gchararray"/>
-      <!-- column-name col_description -->
-      <column type="gchararray"/>
-      <!-- column-name col_type -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
-  <object class="GtkListStore" id="lst_lsnr_types">
-    <columns>
-      <!-- column-name col_lsnr_base -->
-      <column type="ListenerBase"/>
-      <!-- column-name col_lsnr_type -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkDialog" id="AddLsnrDialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">OLTRA - Add Listener</property>
@@ -196,22 +115,6 @@ Author: Brian J Hoskins
               <object class="GtkGrid" id="grid8">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkLabel" id="label17">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_left">5</property>
-                    <property name="margin_right">5</property>
-                    <property name="margin_top">5</property>
-                    <property name="margin_bottom">5</property>
-                    <property name="label" translatable="yes">Type: </property>
-                    <property name="xalign">0</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">0</property>
-                  </packing>
-                </child>
                 <child>
                   <object class="GtkLabel" id="label18">
                     <property name="visible">True</property>
@@ -307,25 +210,10 @@ Author: Brian J Hoskins
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBox" id="cmb_lsnr_types">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_left">5</property>
-                    <property name="margin_right">5</property>
-                    <property name="margin_top">5</property>
-                    <property name="margin_bottom">5</property>
-                    <property name="model">lst_lsnr_types</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="cell_text_lsnr_types"/>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">0</property>
-                  </packing>
+                  <placeholder/>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
@@ -343,6 +231,87 @@ Author: Brian J Hoskins
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkAboutDialog" id="dlg_about">
+    <property name="can_focus">False</property>
+    <property name="resizable">False</property>
+    <property name="window_position">center</property>
+    <property name="type_hint">dialog</property>
+    <property name="program_name">OLTRA</property>
+    <property name="version">Version 3.0</property>
+    <property name="copyright" translatable="yes">© Brian J Hoskins, Hoskins.Tech</property>
+    <property name="comments" translatable="yes">One logger to rule (them) all.</property>
+    <property name="website">hoskins.tech</property>
+    <property name="website_label" translatable="yes">Hoskins.Tech</property>
+    <property name="authors">Brian J Hoskins</property>
+    <property name="logo">logo_200.png</property>
+    <property name="license_type">gpl-3-0</property>
+    <child internal-child="vbox">
+      <object class="GtkBox" id="aboutdialog-vbox1">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox" id="aboutdialog-action_area1">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkListStore" id="lst_debug">
+    <columns>
+      <!-- column-name TIME -->
+      <column type="gchararray"/>
+      <!-- column-name TYPE -->
+      <column type="gchararray"/>
+      <!-- column-name MESSAGE -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="lst_extraction_engines"/>
+  <object class="GtkListStore" id="lst_history">
+    <columns>
+      <!-- column-name TIME_STAMP -->
+      <column type="gchararray"/>
+      <!-- column-name SERIAL_NUMBER -->
+      <column type="gchararray"/>
+      <!-- column-name RESULT -->
+      <column type="gboolean"/>
+      <!-- column-name MESSAGE -->
+      <column type="gchararray"/>
+      <!-- column-name STATION -->
+      <column type="gchararray"/>
+      <!-- column-name REJECT_ID -->
+      <column type="guint"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="lst_listeners">
+    <columns>
+      <!-- column-name col_name -->
+      <column type="gchararray"/>
+      <!-- column-name col_description -->
+      <column type="gchararray"/>
+      <!-- column-name col_type -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="lst_lsnr_types">
+    <columns>
+      <!-- column-name col_lsnr_base -->
+      <column type="ListenerBase"/>
+      <!-- column-name col_lsnr_type -->
+      <column type="gchararray"/>
+    </columns>
   </object>
   <object class="GtkListStore" id="lst_projects"/>
   <object class="GtkWindow" id="window1">
@@ -783,6 +752,7 @@ ID</property>
               <object class="GtkNotebook" id="nbk_engineering">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <signal name="select-page" handler="on_nbk_engineering_select_page" swapped="no"/>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
@@ -1088,19 +1058,6 @@ ID</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <object class="GtkButton" id="btn_lsnr_edit">
-                                                <property name="label" translatable="yes">EDIT</property>
-                                                <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="receives_default">True</property>
-                                                <property name="hexpand">True</property>
-                                              </object>
-                                              <packing>
-                                                <property name="left_attach">1</property>
-                                                <property name="top_attach">0</property>
-                                              </packing>
-                                            </child>
-                                            <child>
                                               <object class="GtkButton" id="btn_lsnr_status">
                                                 <property name="label" translatable="yes">DISABLE</property>
                                                 <property name="visible">True</property>
@@ -1124,6 +1081,23 @@ ID</property>
                                               <packing>
                                                 <property name="left_attach">1</property>
                                                 <property name="top_attach">1</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkComboBox" id="cmb_lsnr_type">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="model">lst_lsnr_types</property>
+                                                <child>
+                                                  <object class="GtkCellRendererText" id="cell_text_lsnr_type1"/>
+                                                  <attributes>
+                                                    <attribute name="text">1</attribute>
+                                                  </attributes>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="top_attach">0</property>
                                               </packing>
                                             </child>
                                           </object>
