--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -276,6 +276,8 @@ Author: Brian J Hoskins
       <column type="gchararray"/>
       <!-- column-name MESSAGE -->
       <column type="gchararray"/>
+      <!-- column-name COLOUR -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkListStore" id="lst_extraction_engines"/>
@@ -307,8 +309,6 @@ Author: Brian J Hoskins
   </object>
   <object class="GtkListStore" id="lst_lsnr_types">
     <columns>
-      <!-- column-name col_lsnr_base -->
-      <column type="ListenerBase"/>
       <!-- column-name col_lsnr_type -->
       <column type="gchararray"/>
     </columns>
@@ -1405,6 +1405,8 @@ ID</property>
                             <property name="margin_top">5</property>
                             <property name="margin_bottom">5</property>
                             <property name="active">True</property>
+                            <signal name="activate" handler="on_swt_application_debug_activate" swapped="no"/>
+                            <signal name="state-set" handler="on_swt_application_debug_state_set" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1435,28 +1437,57 @@ ID</property>
                               <object class="GtkTreeView" id="trv_debug">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="valign">start</property>
                                 <property name="margin_left">5</property>
                                 <property name="margin_right">5</property>
                                 <property name="margin_top">5</property>
                                 <property name="margin_bottom">5</property>
+                                <property name="vexpand">True</property>
+                                <property name="resize_mode">immediate</property>
                                 <property name="model">lst_debug</property>
-                                <property name="headers_clickable">False</property>
+                                <property name="enable_search">False</property>
                                 <child internal-child="selection">
                                   <object class="GtkTreeSelection" id="treeview-selection9"/>
                                 </child>
                                 <child>
                                   <object class="GtkTreeViewColumn" id="col_debug_timestamp">
                                     <property name="title" translatable="yes">TIME STAMP</property>
+                                    <property name="clickable">True</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cell_text_debug_time"/>
+                                      <attributes>
+                                        <attribute name="foreground">3</attribute>
+                                        <attribute name="text">0</attribute>
+                                      </attributes>
+                                    </child>
                                   </object>
                                 </child>
                                 <child>
                                   <object class="GtkTreeViewColumn" id="col_debug_type">
                                     <property name="title" translatable="yes">TYPE</property>
+                                    <property name="clickable">True</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cell_text_debug_type"/>
+                                      <attributes>
+                                        <attribute name="foreground">3</attribute>
+                                        <attribute name="text">1</attribute>
+                                      </attributes>
+                                    </child>
                                   </object>
                                 </child>
                                 <child>
                                   <object class="GtkTreeViewColumn" id="col_debug_message">
                                     <property name="title" translatable="yes">MESSAGE</property>
+                                    <property name="clickable">True</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cell_text_debug_message">
+                                        <property name="wrap_mode">word</property>
+                                      </object>
+                                      <attributes>
+                                        <attribute name="foreground">3</attribute>
+                                        <attribute name="text">2</attribute>
+                                      </attributes>
+                                    </child>
                                   </object>
                                 </child>
                               </object>
