--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -799,6 +799,8 @@ ID</property>
                                                 <property name="model">lst_projects</property>
                                                 <property name="enable_grid_lines">both</property>
                                                 <property name="enable_tree_lines">True</property>
+                                                <signal name="cursor-changed" handler="on_trv_projects_cursor_changed" swapped="no"/>
+                                                <signal name="row-activated" handler="on_trv_projects_row_activated" swapped="no"/>
                                                 <child internal-child="selection">
                                                   <object class="GtkTreeSelection" id="treeview-selection4"/>
                                                 </child>
