--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -22,7 +22,7 @@ Author: Brian J Hoskins
 
 -->
 <interface>
-  <requires lib="gtk+" version="3.12"/>
+  <!-- requires lib="gtk+" version="3.12" -->
   <!-- interface-license-type gplv3 -->
   <!-- interface-name OLTRA -->
   <!-- interface-description One Logger To Rule (them) All -->
